--- a/src/pages/auctions/Auctions.scss
+++ b/src/pages/auctions/Auctions.scss
@@ -187,6 +187,18 @@
     .auction1-img {
         width: 485px;
         height: 396px;
+
+        
+    }
+    .auction1-img:hover {
+        transform: scale(0.8)
+        
+        // width: 400px;
+        // height: 300px;
+        
+        // width: 200px;
+        // height: 200px;
+        // background-color: red;
     }
     .auction2-img {
         height: 280px;
@@ -199,6 +211,9 @@
     }
     .auction1 {
          margin-top:    3rem;
+        //  display: flex;
+        //  align-items: flex-start;
+        //  justify-content: flex-start;
      }
     .auction2 {
         display: flex;
