--- a/src/pages/cart/components/ShippingDetails.scss
+++ b/src/pages/cart/components/ShippingDetails.scss
@@ -1,5 +1,13 @@
 #shipping-details {
     margin-bottom: 4rem;
+    svg {
+        position: absolute;
+        right: 40px;
+        bottom: 33%;
+        transform: rotateX(180deg);
+        width: 22px;
+        height: 10px;
+    }
     form {
         display: flex;
         flex-direction: column;
@@ -23,6 +31,13 @@
             //border: 1px solid #918f8f;
         }
     }
+    select {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -moz: none;
+        
+    }
     label {
         margin-bottom: 0.9rem;
         margin-top: 1rem;
@@ -45,8 +60,35 @@
         //justify-content: center;
     }
     
+    
     input[type='checkbox'] {
         margin-bottom: 0.05rem;
+        cursor: pointer;
+        height: 23px;
+        width: 23px;
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -o-appearance: none;
+        border-radius: 4px;
+        background-color: #D9D9D9;
+        margin-right: 0.7rem;
+        accent-color: #D9D9D9;
+        &:checked {
+            
+            background-image: url('../../../assets/marketplace/checkmark.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            // content: '\2713';
+            // //position: absolute;
+            // display: block;
+            // color: black;
+            // text-align: center;
+            // left: 0.7rem;
+            // top: 0.2rem;
+        }
+        
+       
     }
 
     
@@ -64,10 +106,12 @@
         label {
             font-size: 26px;
         }
+        
         .updates {
             font-size: 20px;
             align-items: center;
         }
+        
     }
     
     
