--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -53,21 +53,21 @@ main {
     position: absolute;
     width: 100%;
     right: 0%;
-    transition: all 1.5s linear;
-    //animation: rotate 4.5s infinite;
+    transition: all 2s linear;
+   // animation: rotate 5s infinite linear;
    }
     
 
 }
 
-// @keyframes rotate {
-//     from {
-//         transform: rotate(0);
-//     }
-//     to {
-//         transform: rotate(360deg);
-//     }
-// }
+@keyframes rotate {
+    from {
+        transform: rotateY(0);
+    }
+    to {
+        transform: rotateY(180deg);
+    }
+}
 
 @media only screen and (min-width: 760px) {
     main {
@@ -734,20 +734,25 @@ table {
 
 @media only screen and (min-width: 760px) {
     #top-creators {
+        position: relative;
         padding: 5rem;
         h3 {
             width: 65%;
-            max-width: 535px;
-            font-size: 55px;
+            max-width: 500px;
+            font-size: 45px;
             line-height: 4.5rem;
         }
         p:nth-of-type(1) {
-            font-size: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 25px;
             line-height: 3rem;
-            max-width: 1148px;
-            margin-top: 7rem;
+            max-width: 900px;
+            margin-top: 4rem;
         }
         img {
+            position: absolute;
             width: 600px;
             bottom: -50px;
             right: 18%;
@@ -803,11 +808,11 @@ table {
     }
     .year {
         font-size: 170px;
-        margin-top: 2rem;
+        margin-top: -4rem;
     }
     .circa {
         font-size: 48px;
-        right: 200px;
+        right: 350px;
         bottom: 45%;
         
     }
