--- a/src/pages/drop/Drop.scss
+++ b/src/pages/drop/Drop.scss
@@ -52,6 +52,7 @@
 .drop-img {
     width: 100%;
     height: 100px;
+    background-color: #b6b6b6;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
