added state for cart

--- a/src/pages/cart/Cart.scss
+++ b/src/pages/cart/Cart.scss
@@ -94,11 +94,11 @@
 .cart-x, .cart-card {
     display: flex;
 }
-.cart-cards {
+// .cart-cards {
     
-    margin-bottom: 110%;
+//     margin-bottom: 110%;
    
-}
+// }
 .cart-card {
     justify-content: space-between;
     margin: 3.5rem 0.3rem;
