--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,11 +3,40 @@
     width: 100%;
     height: 90px;
     background-color: #f9f9f9;
-   // z-index: 1000;
+    
     
 }
+.msg {
+    position: fixed;
+    top: 90px;
+    z-index: 10000;
+    font-size: 24px;
+    background-color: #f9f9f9;
+    width: 300px;
+    height: 60px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    display: grid; 
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 5px 15px rgb(0, 0, 0, 0.2);
+    text-transform: capitalize;
+    font-weight: 500;
+    animation: slideUp 0.3s ease-in-out;
+}
+
+
+@keyframes slideUp {
+    from {
+        top: 0;
+    }
+    to {
+        top: 90px;
+    }
+}
 .head, .icons {
-    display: flex;
+    display: flex; 
     align-items: center;
     animation: fade 0.4s linear;
 }
@@ -16,6 +45,16 @@
     width: 27px;
     
 }
+.ellipse {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background-color: #e31616;
+    display: block;
+    border-radius: 50%;
+    top: -2px;
+    right: -15px;
+}
 .notif {
     display: none;
 }
@@ -23,7 +62,8 @@
     justify-content: space-between;
     //height: 70px;
    // background-color: red;
-    padding: 1.7rem 1.3rem;
+    padding-block: 1.7rem ;
+    padding-left: 1.3rem;
     font-weight: 700;
     font-size: 1.3rem;
     text-align: center;
