--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 90px;
     background-color: #f9f9f9;
+   //overflow: hidden;
     
     
 }
@@ -52,8 +53,8 @@
     background-color: #e31616;
     display: block;
     border-radius: 50%;
-    top: -2px;
-    right: -15px;
+    top: -1.5px;
+    right: -8px;
 }
 .notif {
     display: none;
@@ -73,10 +74,19 @@
     width: 100%;
     transition: all 0.4s linear;
     
+    > a {
+        transition: margin-left 0.4s ease-in-out;
+        //background-color: red;
+    }
 }
 
 .hamburger {
-   transition: all 0.4s linear;
+   transition: all 0.5s linear;
+   //float: right;
+   //position: absolute;
+    //right: 0;
+    z-index: 100;
+   //background-color: red;
    
     div {
         background-color: black;
@@ -94,7 +104,7 @@
     padding-top: 4rem;
     padding-left: 1.2rem;
     transition: all 0.3s linear;
-    background-color: red;
+    background-color: #f9f9f9;
     position: fixed; //new
     width: 100%; //new
    z-index: 100;
@@ -102,6 +112,8 @@
         margin-top: 1.5rem;
         font-size: 1.4rem;
         cursor: pointer;
+        transition: all 100s linear;
+        
        
     }
 
@@ -115,14 +127,18 @@
     height: 64px;
 }
 .open {
-    transform: translateX(0);
+    transform: translateY(0);
     
 }
 .close {
-    transform: translateX(-100%);
+    transform: translateY(-100%);
 
 }
 @media only screen and (min-width: 760px) {
+    .ellipse {
+        
+        right: -15px;
+    }
     .open, .close {
         transform: translate(-50%, -50%);
     }
