--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@
   padding: 0;
   box-sizing: border-box;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  scrollbar-color: red;
+  
   
 }
+
 @keyframes show {
   from {
     opacity: 0; visibility: hidden;
