--- a/src/pages/auctions/AuctionDetail.scss
+++ b/src/pages/auctions/AuctionDetail.scss
@@ -1,9 +1,37 @@
 .auction-bg {
     padding: 0;
     margin: 0;
-    width: 100%;
+     min-width: 100vw;
     min-height: 100vh;
+    // height: 100%;
+    // width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    content: '';
+    padding: 0;
+    margin: 0;
+    min-width: 100vw;
+    width: 100%;
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(0,0,0,0.2);
+    background-size: cover;
+    background-color: rgba(0,0,0,1);
+    
 }
+// .auction-bg::before {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     content: '';
+//     padding: 0;
+//     margin: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-color: rgba(0,0,0,1);
+//     background-image: url('../../assets/auctions/img1.svg');
+// }
