--- a/src/pages/cart/components/CartHead.scss
+++ b/src/pages/cart/components/CartHead.scss
@@ -51,3 +51,8 @@
         display: flex;
     }
 }
+// @media only screen and (max-width: '1145px') {
+//     #cart-head, .underline-body{
+//         display: none;
+//     }
+// }
