--- a/src/pages/cart/components/ShippingDetails.scss
+++ b/src/pages/cart/components/ShippingDetails.scss
@@ -1,12 +1,15 @@
 #shipping-details {
-    margin-bottom: 4rem;
+   // margin-bottom: 4rem;
+   //display: none;
+   
     svg {
         position: absolute;
-        right: 40px;
-        bottom: 33%;
+        
         transform: rotateX(180deg);
         width: 22px;
         height: 10px;
+        right: 28px;
+        bottom: 32.5%;
     }
     form {
         display: flex;
@@ -99,6 +102,11 @@
 @media only screen and (min-width:760px) {
 
     #shipping-details {
+        svg {
+            right: 40px;
+            bottom: 33%;
+        }
+        //display: flex;
         input[type='text'], input[type='email'], input[type='number'], select {
             height: 76px;
             font-size: 26px;
