--- a/src/pages/auctions/Auctions.scss
+++ b/src/pages/auctions/Auctions.scss
@@ -188,23 +188,55 @@
     .auction1-img {
         width: 485px;
         height: 396px;
-
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
         
+        // width: 100%;
+        // height: 100%;
+       
     }
-    .auction1-img:hover {
-        transform: scale(0.8)
+    .auction-img-container {
+        min-width: 485px;
+        min-height: 396px;
+        position: relative;
+        //background-color: red;
+        margin-right: 1rem;
+        &:hover {
+            .auction-shadow {
+                opacity: 1;
+            }
+            
+             .auction1-img {
+                // width: 70%;
+                // height: 70%;
+                 width: 430px;
+                 height: 350px;
+                 background: rgba(0, 0, 0, 0.7);
+                //background-image: linear-gradient(115deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+                 
+                
+             }
+         }
         
-        // width: 400px;
-        // height: 300px;
-        
-        // width: 200px;
-        // height: 200px;
-        // background-color: red;
+
     }
     .auction2-img {
         height: 280px;
         width: 100%;
         border-radius: 8px;
+    }
+    .auction-shadow {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        position: absolute;
+        z-index: 2;
+        width: 430px;
+        height: 350px;
+        border-radius: 8px;
+        opacity: 0;
+
     }
     .circles span {
         width: 9.33px;
@@ -217,13 +249,17 @@
         //  justify-content: flex-start;
      }
     .auction2 {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-column-gap: 1rem;
+       // flex-wrap: wrap;
+       // justify-content: space-between;
+       // align-items: center;
+        max-width: 1280px;
     }
     .auction2-card {
-
-        width: 520px;
+        //width: 100%;
+       // max-width: 520px;
         //height: 498px;
        
         padding: 1.5rem 0;
@@ -270,6 +306,7 @@
     .timer {
         height: 85px;
         font-size: 40px;
+        z-index: 3;
     }
 
     
