--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
   scrollbar-color: red;
-  
+  font-family: 'Satoshi', sans-serif;
   
 }
 
