--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 90px;
     background-color: #f9f9f9;
+    transition: all 0.4s linear;
    //overflow: hidden;
     
     
@@ -211,6 +212,7 @@
     .unclicked {
         color: #292929;
         font-weight: 400;
+       // transition: all 0.4s linear;
     }
     .clicked {
         color: black;
@@ -218,8 +220,10 @@
         border-bottom: 1.5px solid black;
         transition: all 0.3s linear;
         transform: scale(1.05);
+        //transition: all 0.4s linear;
         &:border-bottom {
             animation: fade 4s linear;
+            //transition: all 0.4s linear;
         }
     }
 }
