--- a/src/pages/auctions/auctionDetail/AuctionDetail.scss
+++ b/src/pages/auctions/auctionDetail/AuctionDetail.scss
@@ -203,7 +203,7 @@
         .auction-flex {
             border: 2px solid #BCB7B7;
             width: 100%;
-            height: 520px;
+            height: 100%;
             display: grid;
             grid-template-columns: 1fr 1fr;
         }
@@ -224,10 +224,12 @@
                 border-radius: 25px;
                 background-color: transparent;
                 border: 1px solid #616161;
-                text-indent: 2rem;
+               // text-indent: 2rem;
                 font-size: 22px;
                 color: #616161;
                 margin-top: 0.5rem;
+                padding-right: 4.3rem;
+                padding-left: 2rem;
                 &::placeholder {
                     color: #616161;
                     font-weight: 500;
@@ -237,6 +239,34 @@
                     outline: none;
                 }
             }
+            .commenter {
+                display: flex;
+                align-items: center;
+                margin-bottom: 1.45rem;
+            }
         }
+    }
+    .comment-img {
+        width: 60px;
+        margin-right: 1rem;
+    }
+    .commenter-name {
+        margin-bottom: 0.7rem;
+        color: #333333;
+        font-weight: 400;
+    }
+    .commenter-comment {
+        color: #333333;
+        font-weight: 500;
+    }
+    .input2 {
+        position: relative;
+        width: 404px;
+       
+    }
+    .airplane {
+        position: absolute;
+        bottom: 18px;
+        right: 28px;
     }
 }
