--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,3 +1,12 @@
+@keyframes increase {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
 main {
     padding-top: 0rem;
     width: 100%;
