--- a/src/pages/auctions/auctionDetail/AuctionDetail.scss
+++ b/src/pages/auctions/auctionDetail/AuctionDetail.scss
@@ -1,20 +1,53 @@
-.marquee {
-    white-space: nowrap;
+.marquee-container {
     overflow: hidden;
-    position: relative;
-    width: 100%;
-    animation: marquee 10s linear infinite;
-    span {
-        display: inline-block;
-        padding-right: 30px;
-    }
+    //width: 200px;
+    //background-color: #4693ED;
 }
+.marquee {
+   // display: inline-block;
+   // white-space: nowrap;
+    // overflow: hidden;
+    // position: relative;
+    // width: 100%;
+    animation: marquee 10s linear infinite;
+    -moz-animation: marquee 10s linear infinite;
+    -webkit-animation: marquee 10s linear infinite;
+    // span {
+    //     display: inline-block;
+    //     padding-right: 30px;
+    // }
+}
+
 @keyframes marquee {
     0% {
-        left: 0;
+          transform: translate(0, 0);
+    //   transform: translateX(100%);
+    //    -webkit-transform: translateX(100%);
+    //    -moz-transform: translateX(100%);
     }
     100% {
-        left: -100%;
+        transform: translate(0, -100%);  
+        // transform: translateX(-100%);
+        // -webkit-transform: translateX(-100%);
+        // -moz-transform: translateX(-100%);
+    }
+}
+
+@-moz-keyframes marquee {
+    0% {
+       transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes marquee {
+    0% {
+       transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
     }
 }
 
