failed attempt to do marquee

--- a/src/pages/auctions/auctionDetail/AuctionDetail.scss
+++ b/src/pages/auctions/auctionDetail/AuctionDetail.scss
@@ -335,6 +335,6 @@
         flex-direction: column;
         flex-direction: column-reverse;
         height: 480px;
-        overflow-y: visible;
+        overflow-y: hidden;
     }
 }
