--- a/src/pages/auctions/auctionDetail/AuctionDetail.scss
+++ b/src/pages/auctions/auctionDetail/AuctionDetail.scss
@@ -1,3 +1,4 @@
+
 .marquee-container {
     overflow: hidden;
     //width: 200px;
@@ -172,6 +173,8 @@
 .auction-aside {
     display: none;
 }
+
+
 // .auction-bg::before {
 //     position: fixed;
 //     top: 0;
@@ -189,7 +192,7 @@
 // }
 
 
-@media only screen and (min-width: 860px) {
+@media only screen and (min-width: 1100px) {
     .auction-bg {
         width: 100%;
         height: 100%;
@@ -208,6 +211,7 @@
         }
         h1 {
             font-size: 48px;
+            text-align: center;
         }
         .live {
             background-color: #4693ED;
@@ -260,81 +264,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
         }
-        .auction-aside {
-            //overflow-y: scroll;
-            background-color: #f9f9f9;
-            display: flex;
-            flex-direction: column;
-            padding: 0 0 1rem 2.5rem;
-            p {
-                color: #BAB9B9;
-                font-style: italic;
-                font-weight: 500;
-                font-size: 20px;
-            }
-            input {
-                width: 404px;
-                height: 65px;
-                border-radius: 25px;
-                background-color: transparent;
-                border: 1px solid #616161;
-               // text-indent: 2rem;
-                font-size: 22px;
-                color: #616161;
-                margin-top: 0.5rem;
-                padding-right: 4.3rem;
-                padding-left: 2rem;
-                &::placeholder {
-                    color: #616161;
-                    font-weight: 500;
-                    font-size: 22px;
-                }
-                &:focus {
-                    outline: none;
-                }
-            }
-            .commenter {
-                display: flex;
-                align-items: center;
-                margin-bottom: 1.45rem;
-            }
-        }
-    }
-    .comments-container {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        padding-right: 3rem;
         
     }
-    .comment-img {
-        width: 60px;
-        margin-right: 1rem;
-    }
-    .commenter-name {
-        margin-bottom: 0.7rem;
-        color: #333333;
-        font-weight: 400;
-    }
-    .commenter-comment {
-        color: #333333;
-        font-weight: 500;
-    }
-    .input2 {
-        position: relative;
-        width: 404px;
-       
-    }
-    .airplane {
-        position: absolute;
-        bottom: 18px;
-        right: 28px;
-    }
-    .comments {
-        display: flex;
-        flex-direction: column;
-        flex-direction: column-reverse;
-        height: 480px;
-        overflow-y: hidden;
-    }
+    
 }
