--- a/src/pages/auctions/auctionDetail/components/HeartAnimation.scss
+++ b/src/pages/auctions/auctionDetail/components/HeartAnimation.scss
@@ -4,8 +4,8 @@
     position: relative;
     bottom: -25px;
     right: 0%;
-    background-color: red;
-    
+   // background-color: red;
+    height: 300px;
     //margin-left: -50px;
    // background-color: red;
 }
