--- a/src/pages/auctions/Auctions.scss
+++ b/src/pages/auctions/Auctions.scss
@@ -84,6 +84,7 @@
     padding: 1rem;
     color: #333333;
     .heart {
+        position: relative;
         width: 28px;
         height: 28px;
         border: 1px solid #000;
