--- a/src/pages/auctions/auctionDetail/AuctionDetail.scss
+++ b/src/pages/auctions/auctionDetail/AuctionDetail.scss
@@ -159,12 +159,12 @@
         border: 1px solid #FFFFFF;
         border-radius: 15px;
         width: 100%;
-        height: 35px;
+        height: 50px;
         text-indent: 2rem;
         
         &::placeholder {
             color: #FFFFFF;
-
+            font-size: 1rem;
         }
        
     }
@@ -197,6 +197,9 @@
         width: 100%;
         height: 100%;
         position: relative;
+        .auction-aside {
+            display: none;
+        }
         .header-2 {
             display: flex;
             flex-direction: row-reverse;
