--- a/src/pages/cart/paymentDetails/PaymentDetails.scss
+++ b/src/pages/cart/paymentDetails/PaymentDetails.scss
@@ -1,10 +1,6 @@
 #payment-details {
     margin-bottom: 3.5rem;
     animation: fadeIn 0.4s linear;
-   
-    // * {
-    //     color: #747474;
-    // }
     p {
         line-height: 157.6%;
         //font-size: 16px;
@@ -74,12 +70,29 @@
         margin-bottom: 3rem;
         input[type='checkbox'] {
             margin-right: 0.5rem;
+            cursor: pointer;
+            height: 20px;        ////////////////notce this
+            width: 23px;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            -o-appearance: none;
+            border-radius: 4px;
+            background-color: #D9D9D9;
+            padding: 0.5rem;
+           // margin-right: 0.7rem;
+            accent-color: #D9D9D9;
             &:focus {
                 box-shadow: 0 0 0 0.2rem #e4dede;
                 outline: none;
                 
             }
-    
+            &:checked {
+            
+                background-image: url('../../../assets/marketplace/checkmark.svg');
+                background-repeat: no-repeat;
+                background-position: center;
+            }
         }
        
         //margin-left: 1rem;
@@ -120,9 +133,13 @@
         
         width: 42px;
         height: 42px;
-       
+        cursor: pointer;
         padding: 0;
+        &:hover {
+            transform: scale(1.05);
+        }
     }
+
     
 
 }
@@ -205,7 +222,8 @@
         height: 29px;
         position: absolute;
         right: 15px;
-        top: 40%
+        top: 40%;
+        
     }
 }
 .desktop {
@@ -298,6 +316,7 @@
         svg, img {
             width: 50px;
             height: 50px;
+            
         }
 
         // &:first-child {
