--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,10 @@
 body {
   background-color: #f9f9f9;
 }
+
+::-webkit-scrollbar-thumb {
+ // appearance: none;
+  //border: 1px solid #4693ED;
+  //background: red;
+ // appearance: none;
+}
