--- a/src/pages/confirmed/Confirmed.scss
+++ b/src/pages/confirmed/Confirmed.scss
@@ -2,7 +2,7 @@
     //display: grid;
     //place-items: center;
     text-align: center;
-    img {
+    .confirmed-illustration {
         width: 275px;
         height: 246px;
     }
@@ -22,30 +22,266 @@
         ;
     }
 }
-
+.circle-rings {
+    display: none;
+}
 @media only screen and (min-width:'760px') {
     #confirmed {
-       
-        img {
-            width: 400px;
+       //padding-top: 1rem;
+       .confirmed-illustration {
+            width: 350px;
             height: 350px;
+           // paddi-top: 2rem;
         }
         h3 {
-            font-size: 40.552px;
-            margin-top: 1rem;
+            font-size: 30.552px;
+            margin-top: 0.5rem;
         }
         p {
-            font-size: 30.414px;
+            font-size: 20.414px;
+            font-weight: 400;
+            margin-top: 1.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         
     }
     .circle-rings {
-        position: absolute;
+        display: block;
+        position: fixed;
         left: -65px;
         top: -10px;
         z-index: 1000;
-        width: 623.49px;
-        height: 623.49px;
+        width: 100%;
+        width: 423.49px;
+        height: 423.49px;
         
+    }
+    .confetti-animation {
+        position: relative;
+        width: 200px;
+        height: 50px;
+       // background-color: aqua;
+        img {
+           
+            position: absolute;
+        }
+    }
+    .first-stage {
+       position: absolute;
+        left: 10px;
+        bottom: 10px;
+        height: 80px;
+        width: 80px;
+        z-index: 1;
+        // background-color: red;
+        animation: firstStage 1.1s ease-in infinite;
+       
+    }
+    .second-stage {
+        left: 30px;
+        bottom: 5px;
+        width: 60px;
+       // background-color: #006CA2;
+        //height: 10px;
+        z-index: 2;
+        transform: rotate(10deg);
+        animation: secondStage 1s infinite;
+        //display: none;
+    }
+    .third-stage {
+        width: 30px;
+        left: 54px;
+        bottom: 19px;
+        z-index: 3;
+        animation: thirdStage 1.1s ease-in infinite;
+        //display: none;
+    }
+    .sprinkles {
+        bottom: -60px;
+        left: -80px;
+        width: 250px;
+        animation: sprinkles 1.1s ease-in-out infinite;
+    }
+    .fourth-stage {
+        left: 34px;
+        bottom: 7px;
+        width: 50px;
+        z-index: 4;
+        //animation: fourthStage 1s ease-in infinite;
+    }
+    .pink-band {
+        z-index: 5;
+        width: 80px;
+        left: 85px;
+        bottom: 55px;
+       animation: fifthStage 1s infinite;
+    }
+    .red-band {
+        width: 35px;
+        z-index: 5;
+        left: 45px;
+        bottom: 55px;
+        animation: fourthStage 1s infinite;
+    }
+}
+
+@keyframes firstStage {
+    0% {
+        left: 10px;
+        bottom: 10px;
+    }
+    55% {
+        bottom: -2px;
+        left: 20px;
+    }
+    100% {
+        bottom: -4px;
+        left: 20px;
+    }
+    
+}
+
+@keyframes secondStage {
+    0% {
+        // visibility: hidden;
+        opacity: 0;
+    }
+    15% {
+        opacity: 0;
+    }
+    65% {
+        //visibility: visible;
+       opacity: 1;
+    }
+    60% {
+        //visibility: visible;
+       opacity: 0;
+    }
+    100% {
+       //visibility: hidden;
+       opacity: 0;
+    }
+}
+@keyframes thirdStage {
+    0% {
+        opacity: 0;
+    }
+    55% {
+       opacity: 1;
+    }
+     100% {
+        opacity: 1;
+     }
+}
+@keyframes fourthStage {
+    0% {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+    // 25% {
+    //    opacity: 0;
+    //    transform: rotate(0deg);
+    // }
+    // 65% {
+    //     opacity: 1;
+    //     width: 5px;
+    //     //transform: translate(15px, -25px);
+    //    // opacity: 1;
+    //    // transform: rotate(0deg);
+    // }
+    // 70% {
+    //    // left: 25px;
+    //    // bottom: 35px;
+    //    // opacity: 0.5;
+    //     //transform: rotate(90deg);
+    //     width: 15px;
+    // }
+    50% {
+        left: 30px;
+        bottom: 40px;
+        width: 25px;
+    opacity: 1;
+   
+        //transform: rotate(90deg);
+       // width: 15px;
+    }
+    //  90% {
+    //    // opacity: .5;
+    //    left: 65px;
+    //    bottom: 75px;
+        
+    //     width: 35px;
+    //  }
+    95% {
+        //transform: rotate(150deg);
+    }
+     100% {
+        left: 65px;
+        bottom: 75px;
+            
+        width: 35px;
+        
+       // width: 30px;
+       
+        opacity: 0;
+
+     }
+}
+@keyframes fifthStage {
+    0% {
+        opacity: 0;
+      //  transform: rotate(0deg);
+    }
+    25% {
+       opacity: 0;
+      // transform: rotate(0deg);
+    }
+    65% {
+        opacity: 1;
+       
+       // bottom: 50px;
+      // transform: translate(15px, 30px);
+      
+       // opacity: 1;
+       // transform: rotate(0deg);
+    }
+    70% {
+       // left: 45px;
+        //bottom: 25px;
+       // opacity: 0.5;
+        //transform: rotate(90deg);
+       // width: 5px;
+    }
+    85% {
+        left: 60px;
+        bottom: 40px;
+        ///opacity: 0.75;
+       // transform: rotateX(60deg);
+       // width: 15px;
+    }
+     90% {
+       // opacity: .5;
+        left: 85px;
+        bottom: 55px;
+        //width: 25px;
+     }
+     100% {
+       // width: 30px;
+      // transform: translate(15px, 30px);
+       //transform: rotate(40deg);
+       // opacity: 0;
+     }
+}
+@keyframes sprinkles {
+    0% {
+        opacity: 0;
+    }
+    55% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
