--- a/src/pages/cart/paymentDetails/PaymentDetails.scss
+++ b/src/pages/cart/paymentDetails/PaymentDetails.scss
@@ -89,7 +89,7 @@
             }
             &:checked {
             
-                background-image: url('../../../assets/marketplace/checkmark.svg');
+                background-image: url('../../../assets/marketplace/checkmark.webp');
                 background-repeat: no-repeat;
                 background-position: center;
             }
