--- a/src/pages/confirmed/Confirmed.scss
+++ b/src/pages/confirmed/Confirmed.scss
@@ -44,6 +44,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            
+        }
+            
+        span:nth-of-type(1) {
+            
+            margin-left: 0.5rem;
         }
         
     }
@@ -60,7 +66,7 @@
     }
     .confetti-animation {
         position: relative;
-        width: 200px;
+        //width: 200px;
         height: 50px;
        // background-color: aqua;
         img {
@@ -87,7 +93,7 @@
         //height: 10px;
         z-index: 2;
         transform: rotate(10deg);
-        animation: secondStage 1s infinite;
+        animation: secondStage 1.1s infinite;
         //display: none;
     }
     .third-stage {
@@ -116,14 +122,16 @@
         width: 80px;
         left: 85px;
         bottom: 55px;
-       animation: fifthStage 1s infinite;
+       animation: fifthStage 1.1s infinite;
     }
     .red-band {
         width: 35px;
         z-index: 5;
         left: 45px;
         bottom: 55px;
-        animation: fourthStage 1s infinite;
+        //transform: rotate(90deg);
+        animation: fourthStage 1.1s infinite;
+        // animation-direction: reverse;
     }
 }
 
@@ -177,8 +185,10 @@
 }
 @keyframes fourthStage {
     0% {
-        opacity: 0;
+       
+        //opacity: 0;
         transform: rotate(0deg);
+         //transform: rotate(90deg);
     }
     // 25% {
     //    opacity: 0;
@@ -198,12 +208,12 @@
     //     //transform: rotate(90deg);
     //     width: 15px;
     // }
-    50% {
+    55% {
         left: 30px;
         bottom: 40px;
-        width: 25px;
-    opacity: 1;
-   
+        width: 0px;
+        opacity: 1;
+       
         //transform: rotate(90deg);
        // width: 15px;
     }
@@ -214,15 +224,17 @@
         
     //     width: 35px;
     //  }
-    95% {
-        //transform: rotate(150deg);
-    }
+    // 95% {
+    //    // transform: rotate(150deg);
+       
+       
+    // }
      100% {
         left: 65px;
         bottom: 75px;
             
         width: 35px;
-        
+        //transform: rotate(150deg);
        // width: 30px;
        
         opacity: 0;
@@ -234,40 +246,45 @@
         opacity: 0;
       //  transform: rotate(0deg);
     }
-    25% {
-       opacity: 0;
-      // transform: rotate(0deg);
-    }
-    65% {
-        opacity: 1;
+    // 25% {
+    //    opacity: 0;
+    //   // transform: rotate(0deg);
+    // }
+    // 65% {
+    //     opacity: 1;
        
-       // bottom: 50px;
-      // transform: translate(15px, 30px);
+    //    // bottom: 50px;
+    //   // transform: translate(15px, 30px);
       
-       // opacity: 1;
-       // transform: rotate(0deg);
-    }
-    70% {
-       // left: 45px;
-        //bottom: 25px;
-       // opacity: 0.5;
-        //transform: rotate(90deg);
-       // width: 5px;
-    }
-    85% {
+    //    // opacity: 1;
+    //    // transform: rotate(0deg);
+    // }
+    // 70% {
+    //    // left: 45px;
+    //     //bottom: 25px;
+    //    // opacity: 0.5;
+    //     //transform: rotate(90deg);
+    //    // width: 5px;
+    // }
+    55% {
         left: 60px;
         bottom: 40px;
+        opacity: 1;
+        width: 0px;
         ///opacity: 0.75;
        // transform: rotateX(60deg);
        // width: 15px;
     }
-     90% {
-       // opacity: .5;
-        left: 85px;
-        bottom: 55px;
-        //width: 25px;
-     }
+    //  95% {
+    //    // opacity: .5;
+    //    //transform: rotate(30deg);
+    //     //width: 25px;
+    //  }
      100% {
+         left: 85px;
+        bottom: 55px;
+        width: 80px;
+        opacity: 0;
        // width: 30px;
       // transform: translate(15px, 30px);
        //transform: rotate(40deg);
