--- a/src/pages/marketplace/MarketPlace.scss
+++ b/src/pages/marketplace/MarketPlace.scss
@@ -50,7 +50,7 @@
     }
 }
 .marketplace-sort {
-    svg {
+    img {
         transform: rotateX(180deg);
         margin-left: 0.85rem;
         width: 14px;
@@ -286,7 +286,7 @@
             accent-color: #D9D9D9;
             &:checked {
                 
-                background-image: url('../../assets/marketplace/checkmark.svg');
+                background-image: url('../../assets/marketplace/checkmark.webp');
                 background-repeat: no-repeat;
                 background-position: center;
                 // content: '\2713';
