--- a/src/pages/marketplace/MarketPlace.scss
+++ b/src/pages/marketplace/MarketPlace.scss
@@ -41,7 +41,7 @@
     font-size: 18px;
     //margin-right: 7rem;
     .hide-desktop {
-        svg {
+        img {
             width: 14px;
             margin-left: 0.85rem;
             transform: rotateX(180deg);
