--- a/src/pages/confirmed/Confirmed.scss
+++ b/src/pages/confirmed/Confirmed.scss
@@ -25,6 +25,9 @@
 .circle-rings {
     display: none;
 }
+.confetti-animation {
+    display: none;
+}
 @media only screen and (min-width:'760px') {
     #confirmed {
        //padding-top: 1rem;
@@ -66,6 +69,7 @@
     }
     .confetti-animation {
         position: relative;
+       
         //width: 200px;
         height: 50px;
        // background-color: aqua;
@@ -133,9 +137,9 @@
         animation: fourthStage 1.1s infinite;
         // animation-direction: reverse;
     }
-}
-
-@keyframes firstStage {
+    
+    
+    @keyframes firstStage {
     0% {
         left: 10px;
         bottom: 10px;
@@ -149,9 +153,9 @@
         left: 20px;
     }
     
-}
-
-@keyframes secondStage {
+    }
+    
+    @keyframes secondStage {
     0% {
         // visibility: hidden;
         opacity: 0;
@@ -171,8 +175,8 @@
        //visibility: hidden;
        opacity: 0;
     }
-}
-@keyframes thirdStage {
+    }
+    @keyframes thirdStage {
     0% {
         opacity: 0;
     }
@@ -182,123 +186,65 @@
      100% {
         opacity: 1;
      }
-}
-@keyframes fourthStage {
+    }
+    @keyframes fourthStage {
     0% {
        
         //opacity: 0;
         transform: rotate(0deg);
          //transform: rotate(90deg);
     }
-    // 25% {
-    //    opacity: 0;
-    //    transform: rotate(0deg);
-    // }
-    // 65% {
-    //     opacity: 1;
-    //     width: 5px;
-    //     //transform: translate(15px, -25px);
-    //    // opacity: 1;
-    //    // transform: rotate(0deg);
-    // }
-    // 70% {
-    //    // left: 25px;
-    //    // bottom: 35px;
-    //    // opacity: 0.5;
-    //     //transform: rotate(90deg);
-    //     width: 15px;
-    // }
+    
     55% {
         left: 30px;
         bottom: 40px;
         width: 0px;
         opacity: 1;
        
-        //transform: rotate(90deg);
-       // width: 15px;
     }
-    //  90% {
-    //    // opacity: .5;
-    //    left: 65px;
-    //    bottom: 75px;
-        
-    //     width: 35px;
-    //  }
-    // 95% {
-    //    // transform: rotate(150deg);
-       
-       
-    // }
+    
      100% {
         left: 65px;
         bottom: 75px;
             
         width: 35px;
-        //transform: rotate(150deg);
-       // width: 30px;
+        
        
         opacity: 0;
-
+    
      }
-}
-@keyframes fifthStage {
+    }
+    @keyframes fifthStage {
     0% {
         opacity: 0;
-      //  transform: rotate(0deg);
-    }
-    // 25% {
-    //    opacity: 0;
-    //   // transform: rotate(0deg);
-    // }
-    // 65% {
-    //     opacity: 1;
-       
-    //    // bottom: 50px;
-    //   // transform: translate(15px, 30px);
       
-    //    // opacity: 1;
-    //    // transform: rotate(0deg);
-    // }
-    // 70% {
-    //    // left: 45px;
-    //     //bottom: 25px;
-    //    // opacity: 0.5;
-    //     //transform: rotate(90deg);
-    //    // width: 5px;
-    // }
+    }
+    
     55% {
         left: 60px;
         bottom: 40px;
         opacity: 1;
         width: 0px;
-        ///opacity: 0.75;
-       // transform: rotateX(60deg);
-       // width: 15px;
+       
     }
-    //  95% {
-    //    // opacity: .5;
-    //    //transform: rotate(30deg);
-    //     //width: 25px;
-    //  }
+    
      100% {
          left: 85px;
         bottom: 55px;
         width: 80px;
         opacity: 0;
-       // width: 30px;
-      // transform: translate(15px, 30px);
-       //transform: rotate(40deg);
-       // opacity: 0;
+       
      }
-}
-@keyframes sprinkles {
-    0% {
-        opacity: 0;
     }
-    55% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
+    @keyframes sprinkles {
+        0% {
+            opacity: 0;
+        }
+        55% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
 }
