--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -579,6 +579,7 @@ main {
     .arrow {
         width: 34px;
         border: 1px solid #616161;
+        fill: #616161;
         height: 54px;
         width: 54px;
         border-radius: 50%;
