--- a/src/pages/cart/components/ShippingDetails.scss
+++ b/src/pages/cart/components/ShippingDetails.scss
@@ -119,6 +119,12 @@
             font-size: 20px;
             align-items: center;
         }
+        .separate {
+           
+            display: grid;
+            grid-template-columns: 49% 49%;
+            grid-column-gap: 1rem;
+        }
         
     }
     
