--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -151,6 +151,7 @@ main {
     }
     div {
         //padding: 0 0.425rem;
+        background-color: gray;
         width: 320px;
         height: 450px;
         flex: 0 0 auto;
