--- a/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
+++ b/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
@@ -321,8 +321,8 @@
 // }
 @media only screen and (min-width: 960px) {
     #marketplace-detail {
-        padding-left: 4.5rem;
-        padding-right: 4.5rem;
+        padding-left: 5.5rem;
+        padding-right: 5.5rem;
         .detail-header {
             border-bottom: 0;
             font-size: 24px;
@@ -436,11 +436,11 @@
         background: #FFFFFF;
         box-shadow: 4px 4px 64px rgba(0, 0, 0, 0.08);
         border-radius: 15px;
-        height: 114px;
-        width: 100%;
+        height: 100px;
+        width: 99%;
         padding: 1.5rem;
         font-size: 32px;
-        margin: 5rem 0;
+        margin: 5rem auto 4rem;
         
 
     }
@@ -464,8 +464,8 @@
     .slide-img {
         background-size: cover;
         background-position: center;
-        width: 85%; //95
-        height: 350px; //421
+        max-width: 90%; //95
+        height: 300px; //421
         margin: auto;
         
 
@@ -477,20 +477,29 @@
     .more {
         display: none;
     }
-    .slide{
-       // padding: auto 2rem;
-        margin: auto 0.7rem;
-        border: 1px solid #cccccc;
-        //width: 100%;
-        
-        
-        
+   
+    .slide-heart {
+        width: 40px;
     }
     .slider-wrapper {
         max-width: 100%;
        // overflow-x: scroll;
         border: none;
-        height: 550px;
+        height: 470px;
+        .slide{
+            // padding: auto 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+             margin: auto 0.7rem;
+             border: 1px solid #cccccc;
+             max-width: 400px;
+             //height: 100%;
+             //width: 100%;
+             
+             
+             
+         }
         
         
     }
