--- a/src/pages/cart/components/ShippingDetails.scss
+++ b/src/pages/cart/components/ShippingDetails.scss
@@ -10,6 +10,7 @@
         height: 10px;
         right: 28px;
         bottom: 32.5%;
+        transition: all 0.4s linear;
     }
     form {
         display: flex;
@@ -25,6 +26,7 @@
         text-indent: 1rem;
         margin-bottom: 1rem;
         font-size: 18px;
+        color: black;
         &::placeholder {
             color: #888888;
         }
@@ -61,6 +63,34 @@
             margin-right: 0.5rem;
         }
         //justify-content: center;
+    }
+    .wallet-dropdown {
+        position: absolute;
+        width: 60%;
+        background-color: white;
+        right: 0%;
+        bottom: -80px;
+        border: 1px solid #747474;
+        border-radius: 10px;
+        height: 100px;
+        z-index: 1;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        animation: fadeIn 0.4s linear;
+        img {
+            width: 107px;
+        }
+        * {
+            padding-left: 1rem;
+            padding-top: 0.25rem;
+          //  height: 30px;
+            //width: 100%;
+           // width: 100%;
+        }
+        :nth-child(2) {
+            border-top: 1px solid #747474;
+            border-bottom: 1px solid #747474;
+        }
     }
     
     
@@ -124,6 +154,15 @@
             display: grid;
             grid-template-columns: 49% 49%;
             grid-column-gap: 1rem;
+        }
+        .wallet-dropdown {
+            height: 169px;
+            bottom: -150px;
+            padding-top: 0.4rem;
+            img {
+                width: 177px;
+            }
+           
         }
         
     }
