--- a/src/pages/confirmed/Confirmed.scss
+++ b/src/pages/confirmed/Confirmed.scss
@@ -16,7 +16,7 @@
         font-size: 16px;
         margin-top: 2rem;
     }
-    span {
+    a, span {
         color: #006CA2;
         margin-left: 0.2rem
         ;
@@ -50,7 +50,7 @@
             
         }
             
-        span:nth-of-type(1) {
+        a {
             
             margin-left: 0.5rem;
         }
@@ -69,7 +69,7 @@
     }
     .confetti-animation {
         position: relative;
-       
+       display: block;
         //width: 200px;
         height: 50px;
        // background-color: aqua;
