--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -341,6 +341,7 @@ main {
        
     }
     .product {
+        background-color: gray;
         height: 300px;
         .shadow {
            display: flex;
